--- a/tender/Views/Home/Suggestions.cshtml
+++ b/tender/Views/Home/Suggestions.cshtml
@@ -27,17 +27,15 @@
                 @* Here we will load only top level menu *@
                 @*<li ng-repeat="menu in SiteMenu | filter:{ParentIf : 0}" ng-include="'treeMenu'"></li>*@
                 <li ng-repeat="menu in SiteMenu | filter:{ParentId : 0} : true" ng-include="'treeMenu'"></li>
+                <li style="margin-left:34.15%"><img src="~/Images/logo1.png" width="100" /></li>
             </ul>
         </div>
     </div>
     @* Add css here for nav menu *@
     <link href="~/css/navMenu.css" rel="stylesheet" />
-
-    @* add js here for angular app *@
-    @*@*@*@*@*@*@section Scripts{
+ 
         <script src="~/Scripts/MyApp.js"></script>
-    }*@*@*@*@*@*@
-
+ 
 
     @*<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>*@
@@ -57,26 +55,30 @@
                 src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.pt-BR.js">
         </script>*@
 </head>
+<header style="top:0px;position:relative; text-align:right">
+    <img src="~/Images/search1.png" style="position: inherit;left: 4px;top: -1px; height: 29px;" />
+    <input style="padding:5px 10px; border:none" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Number.." title="Type in a name">
+    <link href="~/css/table.css" rel="stylesheet" />
+</header>
 
-
-<h2>Suggestions's Tender</h2>
-<div>
-
-    <table class="table table-responsive" id="table1">
+<h2>Suggestions Tender</h2>
+ 
+    <table class="table table-responsive" id="t01">
 
 
         <tr>
-            <th>name</th>
-            <th>name of Category</th>
-            <th>Name of the Product</th>
-            <th>name of the Company</th>
-            <th>phone Contact</th>
+            <td>Num Suggestion</td>
+            <td>Tender Name</td>
+            <td>Name of Category</td>
+            <td>Name of the Company</td>
+            <td>Tel</td>
+            <td>Price</td>
+            <td>Suggestion Date</td>
         </tr>
         <tr class="mycontainer" id="mainrow"></tr>
 
     </table>
-</div>
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+ <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <link href="~/css/jquery-ui.css" rel="stylesheet" />
 <link href="~/css/navMenu.css" rel="stylesheet" />
 <link href="~/css/jquery-ui.css" rel="stylesheet" />
