--- a/tender/Views/Home/Tenders.cshtml
+++ b/tender/Views/Home/Tenders.cshtml
@@ -21,6 +21,7 @@
             @* Here we will load only top level menu *@
             @*<li ng-repeat="menu in SiteMenu | filter:{ParentIf : 0}" ng-include="'treeMenu'"></li>*@
             <li ng-repeat="menu in SiteMenu | filter:{ParentId : 0} : true" ng-include="'treeMenu'"></li>
+            <li style="margin-left:34.15%"><img src="~/Images/logo1.png" width="100" /></li>
         </ul>
     </div>
 </div>
@@ -31,8 +32,11 @@
 @section Scripts{
     <script src="~/Scripts/MyApp.js"></script>
 }
-<link href="~/css/table.css" rel="stylesheet" />
-
+<header style="top:0px;position:relative; text-align:right">
+    <img src="~/Images/search1.png" style="position: inherit;left: 4px;top: -1px; height: 29px;" />
+    <input style="padding:5px 10px; border:none" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Number.." title="Type in a name">
+    <link href="~/css/table.css" rel="stylesheet" />
+</header>
 <h2>All Tenders</h2>
 <div>
     <table class="table table-responsive" id="table1">
@@ -44,6 +48,7 @@
         <th>Category</th>
         <th>Type Tender</th>
         <th>Status</th>
+        <th>from</th>
         <th>       </th>
         <th>       </th>
           
