--- a/tender/css/navMenu.css
+++ b/tender/css/navMenu.css
@@ -1,10 +1,4 @@
 ﻿/*Here I will write css for show horizantal nav menu*/
-h1,h2{
-    text-align:center;
-      font-size: 30px;
-   color: rgb(155, 178, 199);
-    text-shadow: 0 1px 0 white;
-}
 ul {
   list-style: none;
   padding: 0;
@@ -17,8 +11,7 @@ ul li {
   display: block;
   /*position: relative;*/
   float: left;
-  background: #000;
-
+  /*background: #000;*/
 
 
 }
@@ -29,16 +22,17 @@ ul li a {
   padding: 1em;
   text-decoration: none;
   white-space: nowrap;
-  color: #fff;
+  /*color: #fff;*/
+  color:white;
     border-top: 0 dotted;
   border-bottom: 4px solid #000000;
-                    text-decoration: none;
-
+  text-decoration: none;
+   text-align:left;
 
 }
  
 ul li a:hover { background: #fff;
-                  text-decoration: none;
+                   text-decoration: none;
                   color:black;
                text-decoration:solid;
 
@@ -52,8 +46,6 @@ li:hover li { float: none; }
  
 li:hover a { background: #000;
       text-decoration: none;
-        text-align:center;
-
 
 }
  
@@ -73,8 +65,3 @@ ul:after {
   display: table; /* 2 */
 }
 ul:after { clear: both; }
-body
-{
-    text-align:center;
-        background-image: linear-gradient(to right, rgb(189, 195, 199) 0%, rgb(236, 240, 241) 40%, rgb(236, 240, 241) 60%, rgb(189, 195, 199) 100%);margin:0}
-
